Email Sending is finished

--- a/EmailSendApp/Views/Home/SendEmail.cshtml
+++ b/EmailSendApp/Views/Home/SendEmail.cshtml
@@ -14,7 +14,7 @@
     <div class="form-row mt-3 ">
         <div class="form-group col-md-5">
             <label for="inputCity">Receiver Mail</label>
-            <input type="text" class="form-control" id="inputCity" asp-for="ReceicerMail">
+            <input type="text" class="form-control" id="inputCity" asp-for="ReceiverMail">
         </div>
     </div>
     <div class="form-group mt-3">
